--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lightgallery": "^2.7.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
@@ -17,7 +18,9 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
-    "react-router-dom": "^6.25.1"
+    "react-responsive-masonry": "^2.3.0",
+    "react-router-dom": "^6.25.1",
+    "swiper": "^11.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
